# bge-python-sdk

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  README.md  coverage.xml  index.html  mkdocs.yml  package.json  pytest.ini  requirements.txt  setup.cfg  setup.py  sonar-project.properties  test_env.sh.example  tox.ini
.github/workflows/: release.yml
BGE_sdk/: api.py  base.py  test.py
bgesdk/: __init__.py  __main__.py  client.py  constants.py  contants.py  error.py  fs.py  http.py  models.py  utils.py  version.py
bgesdk/management/: command.py  constants.py  utils.py  validate.py
bgesdk/management/commands/: config.py  login.py  model.py  model_doc.py  token.py  workon.py
bgesdk/management/commands/api/: __init__.py
bgesdk/management/commands/api/commands/: aggregate_omics_data.py  applet_url.py  download.py  ferry_to_oss.py  get_data_items.py  get_externals.py  get_func_abundance.py  get_gene_abundance.py  get_overview.py  get_range_stream.py  get_samples.py  get_taxon_abundance.py  get_user.py  get_variants.py  id_meta.py  task.py  upload.py  upload_dir.py
docs/: README.md  _navbar.md  _sidebar.md  api.md  badge.md  conf.py  contributors.md  index.html  index.rst  install.md  oauth2.md  quickstart.md
docs/api/: bgesdk.rst  modules.rst
htmlcov/: d_09035c31a1bfee27___init___py.html  d_09035c31a1bfee27_config_py.html  d_09035c31a1bfee27_login_py.html  d_09035c31a1bfee27_model_doc_py.html  d_09035c31a1bfee27_model_py.html  d_09035c31a1bfee27_token_py.html  d_09035c31a1bfee27_workon_py.html  d_2762cbba5382b789___init___py.html  d_5bfbeb3cd7e13854___init___py.html  d_5bfbeb3cd7e13854_aggregate_omics_data_py.html  d_5bfbeb3cd7e13854_download_py.html  d_5bfbeb3cd7e13854_get_data_items_py.html  d_5bfbeb3cd7e13854_get_func_abundance_py.html  d_5bfbeb3cd7e13854_get_gene_abundance_py.html  d_5bfbeb3cd7e13854_get_range_stream_py.html  d_5bfbeb3cd7e13854_get_samples_py.html  d_5bfbeb3cd7e13854_get_taxon_abundance_py.html  d_5bfbeb3cd7e13854_get_user_py.html  d_5bfbeb3cd7e13854_get_variants_py.html  d_5bfbeb3cd7e13854_task_py.html  d_5bfbeb3cd7e13854_upload_dir_py.html  d_5bfbeb3cd7e13854_upload_py.html  d_622475c7672d705f___init___py.html  d_622475c7672d705f_command_py.html  d_622475c7672d705f_constants_py.html  d_622475c7672d705f_utils_py.html  d_622475c7672d705f_validate_py.html  d_823acf8b5a528c84___init___py.html  d_823acf8b5a528c84___main___py.html  d_823acf8b5a528c84_client_py.html  d_823acf8b5a528c84_constants_py.html  d_823acf8b5a528c84_error_py.html  d_823acf8b5a528c84_fs_py.html  d_823acf8b5a528c84_http_py.html  d_823acf8b5a528c84_models_py.html  d_823acf8b5a528c84_utils_py.html  d_823acf8b5a528c84_version_py.html  d_ba262d07135f73a6_six_py.html  index.html  setup_py.html  (+1 more)
tests/: conftest.py  test_abundance.py  test_fs.py  test_model.py  test_models.py  test_oauth2.py  test_phenotype.py  test_samples.py  test_user.py  test_variants.py
