[metadata]
name = bge-python-sdk
version = 0.1a1
description = 可用于调用 BGE 开放平台的相关接口。
long_description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/teambge/bge-python-sdk
author = leafcoder, xiangji1204
author_email = leafcoder@gmail.com, xiangji1204@genomics.cn
license = MIT
license_file = LICENSE
keywords = bge-python-sdk bge bgesdk sdk
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find: