[metadata]
name = bge-python-sdk
version = 0.2.1
description = 可用于调用 BGE 开放平台的相关接口。
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/teambge/bge-python-sdk
author = leafcoder,xiangji1204
author_email = leafcoder@gmail.com,xiangji1204@genomics.cn
license = MIT
license_file = LICENSE
keywords = bge-python-sdk bge bgesdk sdk
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Simplified)
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
[options]
include_package_data = true
packages = find:
setup_requires =
    setuptools
    wheel
    six
[options.entry_points]
console_scripts =
    bge = bgesdk.__main__:main